--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                 method: 'POST',
                 body: new FormData(this)
             })
-            .then(() => window.location.href = 'payment-failed.html')
-            .catch(() => window.location.href = 'payment-failed.html');
+            .then(() => window.location.href = 'index.html.html')
+            .catch(() => window.location.href = 'index.html.html');
         });
     </script>
 </body>
